tests/baselines/reference/contextualClassMethodParameter25.errors.txt
tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter25.ts(6,12): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter25.ts (1 errors) ====
    class Base {
        method(x: number, ...v: any[]) { }
    }
    
    class Derived extends Base {
        method(x) { }
               ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    